checkpoint changes; created interface for storage system APIs. code builds but tests haven't been updated yet